# soundSteeringRemote_mcu_fw

./: CMakeLists.txt  README.md  sdkconfig.old
components/esp32-rotary-encoder-master/: CMakeLists.txt  rotary_encoder.c
components/esp32-rotary-encoder-master/include/: rotary_encoder.h
components/vitoralho__lvgl_esp32_drivers/lvgl_tft/: esp_lcd_backlight.c  ili9341.c
main/: CMakeLists.txt  app_adc.c  app_bluetooth.c  app_encoder.c  app_gpio.c  app_img_directivity160x160.c  app_img_universityCrest160x160.c  app_main.c  app_spi.c  app_timer.c  app_uart2.c  app_utility.c
main/app_include/: app_adc.h  app_bluetooth.h  app_encoder.h  app_gpio.h  app_spi.h  app_timer.h  app_uart2.h  app_utility.h
