set(EXTRA_COMPONENT_DIRS "components")
idf_component_register(SRCS "app_utility.c" "app_bluetooth.c" "app_timer.c" "app_spi.c" "app_main.c" "app_img_universityCrest160x160.c" "app_img_directivity160x160.c" "app_encoder.c" "app_gpio.c" "app_uart2.c" "app_adc.c"
                       INCLUDE_DIRS ".")